# loom-runner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: counter_agent.py
scripts/: bench_runtime.py
src/loom_agent/: __init__.py  checkpoint.py  cli.py  errors.py  runner.py  tools.py
tests/: test_cli.py  test_compact_checkpoint.py  test_package_metadata.py  test_runner_resume.py  test_sqlite_checkpoint.py  test_tools.py
