[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-runner"
version = "0.1.0"
description = "Durable checkpoint/resume runner for async state-machine loops built on loom-tailcalls."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "kroq86" }]
keywords = ["async", "agents", "checkpoint", "sqlite", "state-machine", "durable-execution"]
dependencies = [
    "loom-tailcalls>=0.2.0",
    "flow-xray>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/kroq86/loom-runner"
Repository = "https://github.com/kroq86/loom-runner"
Issues = "https://github.com/kroq86/loom-runner/issues"
"Loom stack" = "https://github.com/kroq86/loom-tailcalls#loom-stack"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
loom-runner = "loom_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
